* Campaigns Out: greatly reduce time spent uploading a CSV phone file for
  a new campaign, by fixing an inefficient database operation. Also, set
  max_execution_time to 1 hour for the duration of the operation to prevent
  it from being aborted.
* Campaigns Out: fix inability to select a form for a new campaign due to
  mismatch in control name in javascript code.

1.5-3
* Fix behavior of agent reporting to prevent mistaking no-agent case with DB error
* Merge new CallCenter reports into SVN:
  - Agent Information: show summary of agent, first/last disconnection, and 
    received incoming calls.
  - Agents Monitoring: real-time status of agents per queue, with total login
    time and number of calls
  - Trunks used per hour: Displays calls placed/answered/abandoned per trunk
    over a specified time period.
  - Agents connection type: displays summary or detail of agent sessions, with
    percentage of agent session actually spent handling calls, per queue, over
    a specified time period.
  - Incoming calls monitoring: real-time summary of incoming calls, grouped
    by queue and status. 
* Dialer: Always save start_time when marking a call as ShortCall. Should fix
  Elastix bug #262.
* Dialer: Remove per-queue counter of pending calls. This code is prone to get
  out of sync with the actual count of pending calls. Instead, store queue
  in call structure and count pending calls that match a given queue.
* Dialer: Fix assumption that Link and Join events will always occur after
  the OriginateResponse event. This does not always hold for calls made through
  the dialplan (Local/XXX@from-internal). Should fix issue of some calls not
  being detected when using dialplan for campaigns. 
* Dialer: An incoming call that is transferred should result in the agent being
  marked as idle in the database, instead of incorrectly keep displaying the
  information for the transferred call. Fixes Elastix bug #213.